# caption

./: Cargo.toml  README.md
.github/workflows/: ci.yml
caption-cli/: Cargo.toml
caption-cli/src/: download.rs  main.rs
caption-core/: Cargo.toml
caption-core/src/: error.rs  lib.rs  pipeline.rs  timing.rs
caption-core/src/align/: ctc_aligner.rs  mod.rs
caption-core/src/audio/: extract.rs  ffmpeg_fallback.rs  mod.rs  resample.rs
caption-core/src/bench/: mod.rs  wer.rs
caption-core/src/burn/: encode.rs  filter.rs  font.rs  mask.rs  mod.rs  probe.rs
caption-core/src/format/: ass.rs  mod.rs  parse.rs  srt.rs  text.rs  vtt.rs
caption-core/src/postprocess/: fillers.rs  hallucination.rs  mod.rs  profanity.rs  punctuation.rs  substitution.rs
caption-core/src/stt/: mod.rs  model.rs  parakeet_backend.rs  whisper_backend.rs
caption-core/src/vad/: mod.rs
