[package]
name = "caption-cli"
version = "0.1.4"
edition = "2021"

[features]
default = ["parakeet"]
parakeet = ["caption-core/parakeet"]

[dependencies]
caption-core = { path = "../caption-core", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
env_logger = "0.11"
flate2 = "1"
libc = "0.2"
indicatif = "0.17"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
zip = "2"

[dev-dependencies]
tempfile = "3"
